--- a/style.css
+++ b/style.css
@@ -6,13 +6,13 @@ html{
 }
 
 body{
-	height:80%;
+	height:90%;
 	width:100%;
 }
 
 div.tubes{
 	border:thin;
-	height:80%;
+	height:100%;
 	width:100%;
 }
 
@@ -21,35 +21,43 @@ div.timer{
 }
 
 section[name^="tube"]{ 
-	border:thick;
 	width:15%;
 	height:50%;
-	background:black;
-	float: left;
+	border:inset;
+	float:left;
 	margin:15px;
 	bottom:0;
 }
-section.ball{
-	background:purple;
-	height:20px;
-	width:20px;
-	bottom:0px;
+
+#selectedTube{
+	border:dotted;
 }
 
-section.sec{
-	background:grey;
-	height:100%;
-	width:20px;
-	float:left;
+.ball{
+	height:20%;
+	width:70%;
+	bottom:0px;
+	margin:25px;
+}
+
+.purple{
+	background:purple;
+}
+.yellow{
+	background:yellow;
+}
+.green{
+	background:green;
+}
+.red{
+	background:red;
 }
 
 .selected{
-	background:blue !important;
+	border:outset;
 }
 
-.unselected{
-	background:red !important;
-}
+
 
 footer,header{
 	height:10%;
