--- a/style_game.css
+++ b/style_game.css
@@ -8,7 +8,7 @@ html,body{
 
 div.tubes{
 	border:groove;
-	height:70%;
+	height:80%;
 	width:100%;
 	bottom:0;
 }
@@ -69,6 +69,7 @@ header{
 
 footer{
 	height:10%;
+	font-style:italic;
 }
 
 h6{
@@ -79,4 +80,7 @@ h6{
 h1{
 	text-align:center;
 	font-size:4em;
+}
+a#logout{
+	border:inset;
 }
